@@ -18,7 +18,7 @@ OBJECTS=xml.obj xmlres.obj xmlrsall.obj &
         xh_radbx.obj xh_sizer.obj xh_slidr.obj xh_spin.obj xh_stbmp.obj xh_sttxt.obj &
         xh_text.obj xh_listb.obj xh_toolb.obj xh_stlin.obj xh_bmp.obj &
         xh_bmpbt.obj xh_cald.obj xh_listc.obj xh_scrol.obj xh_stbox.obj &
-        xh_tree.obj xh_unkwn.obj xh_frame.obj xh_scwin.obj
+        xh_tree.obj xh_unkwn.obj xh_frame.obj xh_scwin.obj xh_split.obj
 
 
 all: $(WXXMLLIB)
