@@ -47,5 +47,6 @@
 #include "wx/xrc/xh_gdctl.h"
 #include "wx/xrc/xh_frame.h"
 #include "wx/xrc/xh_scwin.h"
+#include "wx/xrc/xh_split.h"
 
 #endif // _WX_XMLRES_H_
