@@ -25,6 +25,7 @@ wxBase:
 
 All GUI ports:
 
+- added wxSplitterWindow handler to XRC
 - added wxFlexGridSizer::SetFlexibleDirection() (Szczepan Holyszewski)
 - implemented GetEditControl for wxGenericTreeCtrl (Peter Stieber)
 - improved contrib/utils/convertrc parsing (David J. Cooke)
